update: altura agendamento

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <!-- Google Calendar Appointment Scheduling begin -->
         <iframe
             src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ2q6Ls-z-xCDOqqkiMB0LEqjr4qrXePEKR1y7US1tnWqt7mDdmV-VRYH4MTYBTm_9iwfuPUFh5-?gv=true"
-            style="border: 0" width="90%" height="600" frameborder="0"></iframe>
+            style="border: 0" width="90%" height="1100px" frameborder="0"></iframe>
         <!-- end Google Calendar Appointment Scheduling -->
     </section>
     <section class="location">
